call apply bind

--- a/手写源码/手写函数.html
+++ b/手写源码/手写函数.html
@@ -173,5 +173,57 @@ const throttle = function(func, wait, options) {
     return result;
   }
 }
+
+ // 实现call和apply
+
+  // 不传第一个参数默认window
+  // 改变this指向
+  Function.prototype.myCall = function (context) {
+    var context = context || window;
+    // 给 context 添加一个属性
+    // getValue.call(a, 'qq', '32') => a.fn = getValue
+    context.fn = this
+    // 将context 后面参数取出来
+    var args = [...arguments].slice(1)
+    var result = context.fn(...args)
+    // fn 删除
+    delete context.fn
+    return result
+  }
+
+  // 实现apply
+  Function.prototype.myApply = function (context) {
+    var context = context || window;
+    context.fn = this;
+
+    var result;
+    // 需要判断是否存储第二个参数
+    // 如果存在，就将第二个参数展开
+    if (arguments[1]) {
+      result = context.fn(...arguments[1])
+    } else {
+      result = context.fn()
+    }
+
+    delete context.fn
+    return result
+  }
+
+  // 实现bind
+  Function.prototype.myBind = function (context) {
+    if (typeof this !== 'function') {
+      throw new TypeError('Error')
+    }
+    var _this = this
+    var args = [...arguments].slice(1)
+    // 返回一个函数
+    return function F() {
+      // 因为返回一个函数
+      if (this instanceof F) {
+        return new_this(...args, ...arguments)
+      }
+      return _this.apply(context, args.concat(...arguments))
+    }
+  }
 </script>
 </html>
