--- a/手写源码/手写函数.html
+++ b/手写源码/手写函数.html
@@ -225,5 +225,30 @@ const throttle = function(func, wait, options) {
       return _this.apply(context, args.concat(...arguments))
     }
   }
+
+   // 使用proxy实现监听
+   let onWatch = (obj, setBind, getLogger) => {
+    let handler = {
+      get(target, property, receiver) {
+        getLogger(target, property)
+        return Reflect.get(target, property, receiver);
+      },
+      set(target, property, value, receiver) {
+        setBind(value);
+        return Reflect.set(target, property, value);
+      }
+    };
+    return new Proxy(obj, handler);
+  };
+
+  let obj = { a: 1 }
+  let value
+  let p = onWatch(obj, (v) => {
+    value = v
+  }, (target, property) => {
+    console.log(`Get '${property}' = ${target[property]}`);
+  })
+  p.a = 2 // bind `value` to `2`
+  p.a // -> Get 'a' = 2
 </script>
 </html>
